# fall-anomaly-detection

./: README.md  main.py  pyproject.toml
app/: collector.py  main.py  preprocess.py
app/sensor-output/: sensor_data_F1.csv  sensor_data_R2.csv  sensor_data_R3.csv
dataset_processing/: data_read.py  feature_eng.py
results-fall-detection/: LSTM_history.csv  functional_history.csv  metrics.json  model-architecture.txt
training/: train.py
training/modules/: Dataset.py  Looping.py  Metrics.py  Model.py  Plot.py  TimeSeriesData.py
training/modules/utils/: labels.py  utils.py
