[project]
name = "fall-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.3.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow==2.19.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "tqdm>=4.67.3",
]
